Update to stdcompat 13 needed by pyml

--- a/bundles/stdcompat/stdcompat-current/ChangeLog
+++ b/bundles/stdcompat/stdcompat-current/ChangeLog
@@ -1,8 +1,34 @@
-* Version 11
+* Version 13, 2020-02-22
+
+- Add: stdcompat.h, provides prototype for caml_alloc_initialized_string
+  for OCaml <4.06.0 (already defined in a C library linked with
+  stdcompat.{cma,cmxa}).
+
+- Fix: module Format was not exported
+
+- Fix: remove reference to suppressed module Sort
+
+- Fix: reference to the native plugin (.cmxs) in META
+
+* Version 12, 2020-02-08
+
+- Support for OCaml 4.10.0
+
+- Support for Windows
+
+- Added Bytes.unsafe_blit_string, Filename.quote_command, List.concat_map,
+  List.find_map, Sys.Immediate64
+
+- Equality Lexing.lexbuf = Stdcompat.Lexing.lexbuf is available even for
+  OCaml <4.02.0 (before the introduction of bytes)
+
+* Version 11, 2019-09-30
 
 - caml_alloc_initialized_string is now available for OCaml 4.05.0
 
-* Version 10
+- Added Printexc.to_string_default and Printexc.use_printers
+
+* Version 10, 2019-06-26
 
 - New C stub with definition of caml_alloc_initialized_string for OCaml <4.05.0
 
@@ -10,7 +36,7 @@
 
 - Generate -bin-annot .cmt files for OCaml >=4.00.0
 
-* Version 9
+* Version 9, 2019-03-12
 
 - [compatibility break] Pervasives.protect has been moved to Fun.protect
   since its introduction in OCaml trunk
@@ -27,7 +53,7 @@
 
 - Fix: equality between aliases of Seq.t
 
-* Version 8
+* Version 8, 2018-12-10
 
 - Fix: module Fun was not exported
 
@@ -37,14 +63,14 @@
 
 - Fix: Stdlib.result redefined before 4.03 (instead of 4.06)
 
-* Version 7
+* Version 7, 2018-11-28
 
 - OCaml 4.08.0 additions: Bool, Fun, Array.t, List.t, Bytes and Buffer
   operations on u?int(8|16|32|64), operations on Float, Filename.chop_suffix_opt
 
 - Modules Format and Printf added to the set of redefined modules
 
-* Version 6
+* Version 6, 2018-09-10
 
 - Support for OCaml 4.08.0
 
@@ -79,7 +105,7 @@
     - https://caml.inria.fr/mantis/view.php?id=7820
     - https://github.com/ocaml/ocaml/pull/1897
 
-* Version 5
+* Version 5, 2018-07-11
 - Interfaces are auto-generated.
 
 - stdcompat is now free from any required dependency. There are still
@@ -105,10 +131,10 @@
 
 - Compatibility with uchar package
 
-* Version 4
+* Version 4, 2018-05-30
 - Fix link problems with hypot, copy_sign, ldexp and classify_float
 
-* Version 3
+* Version 3, 2018-04-25
 - Missing List.of_seq/List.to_seq
 - Remove spurious Float.seeded_hash_param
   (suggested by Hezekiah M. Carty:
@@ -123,7 +149,7 @@
   "make USE_MAGIC=false"
 - jbuild script (Hezekiah M. Carty)
 
-* Version 2
+* Version 2, 2018-04-19
 - Redefinitions for Pervasives are now in Stdcompat.Pervasives (they were
   previously defined at the root of Stdcompat), and the module
   Stdcompat.Pervasives is included in Stdcompat, so that opening Stdcompat
@@ -131,4 +157,5 @@
 - Float module (OCaml 4.07.0)
 - Seq module and of_seq/to_seq/...
 
-* Version 1 : initial release
+* Version 1, 2017-11-14
+- Initial release
