typo found by Markus Elfring

--- a/docs/manual/spatch_options.tex
+++ b/docs/manual/spatch_options.tex
@@ -450,7 +450,7 @@ other \#ifdef.}
 
 \normal{-I $\langle$path$\rangle$}{ This option specifies a directory
   in which to find non-local include files.  This option can be used
-  several times to specify multipls include paths.}
+  several times to specify multiple include paths.}
 
 \normal{-{}-include-headers-for-types}{Header files are parsed to collect
   type information, but are not involved in the subsequent matching and
