fix misspelling and use English words
Suggested by Markus Elfring

--- a/docs/manual/cocci_syntax.tex
+++ b/docs/manual/cocci_syntax.tex
@@ -559,7 +559,7 @@ values. These constraints fall in different categories:
   \item comparison constraints to indicate that a metavariable must be equal to
     or different from some integer values or some other metavariables
   \item regexp constraints to indicate that a metavariable's matched code must
-    satisfy or must not statisfy the given regexp
+    satisfy or must not satisfy the given regular expression
   \item script constraints to indicate that the metavariable must validate some
     arbitrary constraint written in a script language. A script constraint must
     return a boolean value
