--- a/install.txt
+++ b/install.txt
@@ -30,6 +30,8 @@ On Fedora, install the following packages
  - ocaml-menhir (optional, bundled)
  - ocaml-pcre-devel (optional, bundled)
 
+It may be necessary to install libpython2.7-dev
+
 You can try to use the package manager of your distribution to install
 the build dependencies. This is not guaranteed to work, as the
 dependencies may change, but chances are it will help you. Some
